--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,19 @@
 @font-face {
   font-family: Verdana;
-  src: url(/fonts/verdana.ttf);
+  src: url(/assets/fonts/verdana-bold.ttf);
+}
+@font-face {
+  font-family: "helvetica";
+  src: url("https://candyfonts.com/wp-data/2018/10/26/11538/HELR45W.ttf")
+      format("woff"),
+    url("https://candyfonts.com/wp-data/2018/10/26/11538/HELR45W.ttf")
+      format("opentype"),
+    url("https://candyfonts.com/wp-data/2018/10/26/11538/HELR45W.ttf")
+      format("truetype");
 }
 
 body {
-  font-family: Verdana !important;
+  font-family: Verdana, Arial, helvetica, sans-serif;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -32,8 +41,8 @@ body {
 }
 
 .logo {
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
 }
 .header .title {
   display: flex;
@@ -42,18 +51,19 @@ body {
   background: #007814;
 }
 
-.title hr {
-  width: 102%;
-  padding: 0;
+hr.solid {
+  border-top: 1px solid #95e17d;
   margin: -1px 0 10px -10px;
-  color: red !important;
+  width: 100px;
+  background-color: #95e17d;
 }
 
 .title-min {
-  margin: 0;
+  margin: 0 0 10px -10px;
   padding: 0;
   display: flex;
   justify-content: space-between;
+  border-bottom: 1px solid #95e17d;
 }
 
 .title-min img {
@@ -63,7 +73,7 @@ body {
 }
 .title h1 {
   font-size: 17px;
-  margin: 15px 0px 0 5px;
+  margin: 15px 0px 0 10px;
   color: #95e17d;
 }
 
@@ -75,15 +85,15 @@ body {
   letter-spacing: 1px;
   height: 55px;
 }
-.title .link{
-    background-image: url(http://www.educationboardresults.gov.bd/images/bar_bk.jpg);
-    background-repeat: repeat-x;
-    height: 23;
-    background: #86C775;
-    text-align: -webkit-right;
-    padding: 5px;
-    color: #ffff;
-    margin-left: -10px;
-    font-size: 14px;
-    border-top: solid 1px #ffffff;
+.title .link {
+  background-image: url(/assets/imgs/bgimg.jpg);
+  background-repeat: repeat-x;
+  /* background: #86c775; */
+  text-align: -webkit-right;
+  padding: 5px;
+  color: #ffff;
+  margin-left: -10px;
+  margin-top: 3px;
+  font-size: 11px;
+  border-top: solid 1px #ffffff;
 }
